@@ -13,7 +13,7 @@ BEGIN {
 }
 
 use strict;
-use Test::More tests => 6;
+use Test::More tests => 11;
 
 my $a1 = [ 1, 2, 3 ];
 push @$a1, $a1;
@@ -38,3 +38,34 @@ $r = \$r;
 $s = \$s;
 
 ok( eq_array ([$s], [$r]) );
+
+
+{
+    # Classic set of circular scalar refs.
+    my($a,$b,$c);
+    $a = \$b;
+    $b = \$c;
+    $c = \$a;
+
+    my($d,$e,$f);
+    $d = \$e;
+    $e = \$f;
+    $f = \$d;
+
+    is_deeply( $a, $a );
+    is_deeply( $a, $d );
+}
+
+
+{
+    # rt.cpan.org 11623
+    # Make sure the circular ref checks don't get confused by a reference 
+    # which is simply repeating.
+    my $a = {};
+    my $b = {};
+    my $c = {};
+
+    is_deeply( [$a, $a], [$b, $c] );
+    is_deeply( { foo => $a, bar => $a }, { foo => $b, bar => $c } );
+    is_deeply( [\$a, \$a], [\$b, \$c] );
+}
