@@ -7,6 +7,9 @@
     - Use of eq_* now officially discouraged.
     - Removed eq_* from the SYNOPSIS.
     - is_deeply(undef, $not_undef); now works. [rt.cpan.org 9441]
+    - is_deeply() was mistakenly interpeting the same reference used twice
+      in a data structure as being circular causing failures.
+      [rt.cpan.org 11623]
 
 0.54  Wed Dec 15 04:18:43 EST 2004
     * $how_many is optional for skip() and todo_skip().  Thanks to 
